--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import logo from "../assets/image/logo.png";
+import logo from "../assets/image/logoHeader.png";
 ---
 
 <div class="blur-background">     
@@ -9,16 +9,13 @@ import logo from "../assets/image/logo.png";
       <i class="ph ph-x"></i>
     </div> 
     <div class="nav-container">
-      <img class="logo" src={logo.src} alt="">
+      <img class="logo" src={logo.src} alt="logo">
       <ul class="navlinks"> 
-        <li><a href="#hola" data-astro-prefetch>HOLA</a></li>
-        <li><a href="#projects" data-astro-prefetch>PROYECTOS</a></li>
-        <li><a href="#about" data-astro-prefetch>ACERCA DE MI</a></li>
-        <li><a href="#contact" data-astro-prefetch>CONTACTAME</a></li>
-        <div class="content"> 
-          <li><a id="language-toggle" href="/en" data-astro-prefetch rel="noreferrer">EN</a></li>
-          <i class="ph ph-translate"></i>
-        </div>
+        <li><a href="#hola" data-astro-prefetch>HOME</a></li>
+        <li><a href="#projects" data-astro-prefetch>ALBUMS</a></li>
+        <li><a href="#about" data-astro-prefetch>VIDEOS</a></li>
+        <li><a href="#about" data-astro-prefetch>GALLERY</a></li>
+        <li><a href="#contact" data-astro-prefetch>SOCIAL MEDIA</a></li>
       </ul>
     </div>
   </nav>
@@ -52,7 +49,7 @@ import logo from "../assets/image/logo.png";
     right: -1000px; 
     width: 100%;
     height: 100%;
-    background-color: rgba($primary, 80%);
+    background-color: rgba($black, 80%);
     transition: right 0.5s ease-out;
     z-index: 2; 
   }
@@ -69,22 +66,22 @@ import logo from "../assets/image/logo.png";
     margin: 0;
   }
 
-  .content, i {
+  i {
     justify-content: center;
     align-items: center;
     text-align: center;
     font-size: 1.7rem;
-    color: $secondary;
+    color: $white;
   }
 
   li:hover {
     text-decoration: underline;
-    text-decoration-color: $tertiary;
+    text-decoration-color: $green;
     text-underline-offset: 13px;
     text-decoration-thickness: 3px;
   }
 
-  .content li {
+  li {
     display: inline-block;
   }
 
@@ -94,7 +91,7 @@ import logo from "../assets/image/logo.png";
     font-size: 1.5rem;
     font-weight: $regular;
     font-family: $heading;
-    color: $secondary;
+    color: $white;
     margin-top: 90px;
   }
 
@@ -124,17 +121,19 @@ import logo from "../assets/image/logo.png";
 
   .ph-x {
     font-size: 3rem;
+    color: $red;
+    box-shadow: 0 0 10px 0 rgba($red, 0.5);
   }
 
   .nav-container {
-      position: relative;
-      top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
   }
 
   .logo {
-    position: absolute;
-    top: 0;
-    width: 100px;
+    width: 200px;
   }
 
   @media only screen and (min-width: 1024px) {
@@ -149,7 +148,7 @@ import logo from "../assets/image/logo.png";
       right: 0;
       top: 0;
       height: auto;
-      background-color: rgba($primary, 90%);
+      background-color: rgba($black, 90%);
       max-width: 100%;
       margin: 0 auto;
       z-index: 99;
