--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,15 +1,8 @@
----
-const {anchor} = Astro.props;
----
-
 <section id="contact">
-    <a href="/CVDEVELOPER.pdf" target="_blank">{anchor}<i class="ph ph-download-simple"></i></a>
   <figure>
     <a href="https://www.linkedin.com/in/luis-santeliz-678935193/" target="_blank"><i class="ph ph-linkedin-logo"></i></a>
     <a href="https://www.instagram.com/louissanteliz/" target="_blank"><i class="ph ph-instagram-logo"></i></a>
     <a href="https://github.com/louis17782" target="_blank"><i class="ph ph-github-logo"></i></a>
-    <a href="https://wa.me/+584127924818" target="_blank"><i class="ph ph-whatsapp-logo"></i></a>
-    
   </figure>
 </section>
 
@@ -38,7 +31,7 @@ const {anchor} = Astro.props;
   }
 
   a:hover {
-    color: $darktertiary;
+    color: $red;
   }
 
   figure {
@@ -57,14 +50,14 @@ const {anchor} = Astro.props;
   }
 
   a:hover i {
-    color: $darktertiary;
+    color: $red;
   }
 
   @media only screen and (min-width: 1024px) {
 
     section {
       flex-direction: row;
-      background-color: $quaternary;
+      background-color: $black;
       justify-content: space-between;
       margin: 100px 0 0 0;
       width: 100%;
@@ -77,6 +70,5 @@ const {anchor} = Astro.props;
     section a {
       margin: 0 5%;
     }
-
   }
 </style>
