--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import Header from "../components/Header.astro";
 import SpanishLayout from "../layouts/SpanishLayout.astro";
 import Social from "../components/Social.astro";
+import Gallery from "../components/Gallery.astro";
+import Videos from "../components/Videos.astro";
 ---
 
 <SpanishLayout title="portafolio">
@@ -9,6 +11,8 @@ import Social from "../components/Social.astro";
 	title="¡Hola! Soy Luis Santeliz, "
 	subtext="Con experiencia en React, JavaScript, HTML y CSS, me dedico a construir aplicaciones web que sean fáciles de usar, rápidas y optimizadas para ofrecer una experiencia fluida al usuario. Echa un vistazo a mi trabajo..!"
 	button="Iniciar Colaboración"/>
+	<Gallery />
+	<Videos />
 	<Social />
 </SpanishLayout>
 <script>
