--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,6 +1,6 @@
 ---
 import logo from "../assets/image/logoradio.png";
-const radioUrl = "https://play.radioking.io/alternative-country-radio43";
+const radioUrl = "https://play.radioking.io/radiotest27";
 ---
 <section id="contact">
   <h2>SOCIAL MEDIA</h2>
