configure navigations id

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,13 +8,13 @@ import album5 from "../assets/image/Album5.jpg";
 import album6 from "../assets/image/Album6.png";
 import album7 from "../assets/image/Album7.webp";
 ---
-<header id="hola">
+<header id="home">
   <img src={logo.src} alt="">
   <div class="content-box"> 
     <h1>A musical escape to the dimension of Jamaican sounds</h1>
   </div>
 </header>
-<section>
+<section id="albums">
   <h2>ALBUMS</h2>
   <div class="underline"></div>
   <div class="albums">
