--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,11 +11,11 @@ import logo from "../assets/image/logoHeader.png";
     <div class="nav-container">
       <ul class="navlinks"> 
         <img class="logo" src={logo.src} alt="logo">
-        <li><a href="#hola" data-astro-prefetch>HOME</a></li>
-        <li><a href="#projects" data-astro-prefetch>ALBUMS</a></li>
-        <li><a href="#about" data-astro-prefetch>VIDEOS</a></li>
-        <li><a href="#about" data-astro-prefetch>GALLERY</a></li>
-        <li><a href="#contact" data-astro-prefetch>SOCIAL MEDIA</a></li>
+        <li><a href="#home" data-astro-prefetch>HOME</a></li>
+        <li><a href="#albums" data-astro-prefetch>ALBUMS</a></li>
+        <li><a href="#videos" data-astro-prefetch>VIDEOS</a></li>
+        <li><a href="#gallery" data-astro-prefetch>GALLERY</a></li>
+        <li><a href="#media" data-astro-prefetch>SOCIAL MEDIA</a></li>
       </ul>
     </div>
   </nav>
