--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -2,7 +2,7 @@
 import logo from "../assets/image/logoradio.png";
 const radioUrl = "https://play.radioking.io/radiotest27";
 ---
-<section id="contact">
+<section id="media">
   <h2>SOCIAL MEDIA</h2>
   <div class="underline"></div>
   <figure>
@@ -15,7 +15,7 @@ const radioUrl = "https://play.radioking.io/radiotest27";
 </section>
 <div class="radio-container">
   <img src={logo.src} alt="">
-  <p id="song-title">RADIO - PLAY NOW</p> 
+  <p id="song-title"></p> 
   <div> 
     <button id="play-button"></button>
     <button id="pause-button"></button>
