--- a/src/components/Videos.astro
+++ b/src/components/Videos.astro
@@ -3,7 +3,7 @@ import video1 from "/video1.mp4";
 import video2 from "/video2.mp4";
 import video3 from "/video3.mp4";
 ---
-<article>
+<article id="videos">
   <h2>VIDEOS</h2>
   <div class="underline"></div>
   <div class="videos">
