--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,4 +17,5 @@ import Videos from "../components/Videos.astro";
 </SpanishLayout>
 <script>
 	import "../script/mainMenu";
+	import "../script/Radio"
 </script>
