--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,6 +1,6 @@
 ---
 import logo from "../assets/image/logoradio.png";
-const radioUrl = "https://play.radioking.io/radiotest27";
+const radioUrl = "/Raggart.mp3";
 ---
 <section id="media">
   <h2>SOCIAL MEDIA</h2>
@@ -98,7 +98,7 @@ const radioUrl = "https://play.radioking.io/radiotest27";
     align-items: center; 
     padding: 10px; 
     box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5); 
-    z-index: 1000;
+    z-index: 10;
   }
 
   .radio-container > div {
