--- a/src/components/Hamburguer.astro
+++ b/src/components/Hamburguer.astro
@@ -16,9 +16,10 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 50px; 
-    height: 40px;
-    background-color: transparent;
+    background-color: rgba($black, 80%);
+    width: 40px;
+    height: 50px;
+    border-radius: 8px;
     border: none;
     cursor: pointer;
     padding: 0;
