changes and delete const urlaudio

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,6 +1,6 @@
 ---
 import logo from "../assets/image/logoradio.png";
-const radioUrl = "/Raggart.mp3";
+const radioUrl = "https://play.radioking.io/radiotest27";
 ---
 <section id="media">
   <h2>SOCIAL MEDIA</h2>
