--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -204,7 +204,8 @@ import album7 from "../assets/image/Album7.webp";
 
     p{
       margin: 20px 0 0 0;
-    } 
+      font-weight: $bold;
+    }
 
     .grey {
       color: $grey;
