--- a/src/components/Videos.astro
+++ b/src/components/Videos.astro
@@ -66,5 +66,7 @@ import video3 from "/video3.mp4";
     color: white;
     font-size: 1.5rem;
     text-align: left;
+    font-family: $text;
+    font-weight: $bold;
   }
 </style>
