--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -110,8 +110,8 @@ const {title} = Astro.props;
   
   .primarybutton {
     background-color: transparent;
-    border: 2px solid $green;
     border-radius: 5px;
+    box-shadow: 0 0 25px 15px rgba($green, 15%);
   }
   
   .primarybutton:hover {
