--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,17 +11,17 @@ import album7 from "../assets/image/Album7.webp";
 <header id="home">
   <img src={logo.src} alt="">
   <div class="content-box"> 
-    <h1>A musical escape to the dimension of Jamaican sounds</h1>
+    <h1>A musical escape to the dimension of Jamaican sounds...</h1>
   </div>
 </header>
 <section id="albums">
-  <h2>ALBUMS</h2>
+  <h2>MUSIC</h2>
   <div class="underline"></div>
   <div class="albums">
     <div class="album project">
       <div class="content-hover"> 
         <img src={album1.src} alt="">
-        <p>RAGGART</p>
+        <p>Dubzz - Raggafunky Session</p>
         <p class="grey">Artist</p>
         <div class="content">
           <button class="primarybutton">
@@ -34,7 +34,7 @@ import album7 from "../assets/image/Album7.webp";
     <div class="album project">
       <div class="content-hover"> 
         <img src={album2.src} alt="">
-        <p>RAGGART</p>
+        <p>Margarita</p>
         <p class="grey">Artist</p>
         <div class="content">
           <button class="primarybutton">
@@ -47,7 +47,7 @@ import album7 from "../assets/image/Album7.webp";
     <div class="album project">
       <div class="content-hover"> 
         <img src={album3.src} alt="">
-        <p>RAGGART</p>
+        <p>Sunshine</p>
         <p class="grey">Artist</p>
         <div class="content">
           <button class="primarybutton">
@@ -60,7 +60,7 @@ import album7 from "../assets/image/Album7.webp";
  <div class="album project">
       <div class="content-hover"> 
         <img src={album4.src} alt="">
-        <p>RAGGART</p>
+        <p>Benicassim</p>
         <p class="grey">Artist</p>
         <div class="content">
           <button class="primarybutton">
@@ -73,7 +73,7 @@ import album7 from "../assets/image/Album7.webp";
    <div class="album project">
       <div class="content-hover"> 
         <img src={album5.src} alt="">
-        <p>RAGGART</p>
+        <p>Be Yourself</p>
         <p class="grey">Artist</p>
         <div class="content">
           <button class="primarybutton">
@@ -86,7 +86,7 @@ import album7 from "../assets/image/Album7.webp";
    <div class="album project">
       <div class="content-hover"> 
         <img src={album6.src} alt="">
-        <p>RAGGART</p>
+        <p>Hi - Fi</p>
         <p class="grey">Artist</p>
         <div class="content">
           <button class="primarybutton">
@@ -99,7 +99,7 @@ import album7 from "../assets/image/Album7.webp";
     <div class="album project">
       <div class="content-hover"> 
         <img src={album7.src} alt="">
-        <p>RAGGART</p>
+        <p>The Dance of Shiva</p>
         <p class="grey">Artist</p>
         <div class="content">
           <button class="primarybutton">
@@ -160,7 +160,6 @@ import album7 from "../assets/image/Album7.webp";
 
   .content-box {
     display: flex;
-    flex-direction: column;
     justify-content: left;
     text-align: left; 
 
@@ -225,14 +224,14 @@ import album7 from "../assets/image/Album7.webp";
       height: 80vh;
     }
 
-    .content-box {
-      max-width: 700px;
-    }
-
     h1 {
       margin-top: 100px;
       font-size: 2rem;
-      margin: 0 15%;
+      margin: 0 9%;
+    }
+
+    .content-box {
+      width: 200%;
     }
 
     header img {
