--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,10 +12,10 @@ import logo from "../assets/image/logoHeader.png";
       <ul class="navlinks"> 
         <img class="logo" src={logo.src} alt="logo">
         <li><a href="#home" data-astro-prefetch>HOME</a></li>
-        <li><a href="#albums" data-astro-prefetch>ALBUMS</a></li>
-        <li><a href="#videos" data-astro-prefetch>VIDEOS</a></li>
+        <li><a href="#albums" data-astro-prefetch>MUSIC</a></li>
+        <li><a href="#videos" data-astro-prefetch>VIDEO</a></li>
         <li><a href="#gallery" data-astro-prefetch>GALLERY</a></li>
-        <li><a href="#media" data-astro-prefetch>SOCIAL MEDIA</a></li>
+        <li><a href="#media" data-astro-prefetch>SOCIAL</a></li>
       </ul>
     </div>
   </nav>
