--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -3,7 +3,7 @@ import logo from "../assets/image/logoradio.png";
 const radioUrl = "https://play.radioking.io/radiotest27";
 ---
 <section id="media">
-  <h2>SOCIAL MEDIA</h2>
+  <h2>SOCIAL</h2>
   <div class="underline"></div>
   <figure>
     <a href="#" target="_blank"><i class="ph-fill ph-spotify-logo"></i></a>
