--- a/src/components/Videos.astro
+++ b/src/components/Videos.astro
@@ -4,7 +4,7 @@ import video2 from "/video2.mp4";
 import video3 from "/video3.mp4";
 ---
 <article id="videos">
-  <h2>VIDEOS</h2>
+  <h2>VIDEO</h2>
   <div class="underline"></div>
   <div class="videos">
     <figure>
