--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -11,9 +11,9 @@ const {title} = Astro.props;
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href={logo.src} />
 		<meta name="viewport" content="width=device-width" />
-    <meta name="description" content="cambiar esto luego">
+    <meta name="description" content="Enjoy the best reggae and dancehall Jamaican music on Raggart Radio. Listen to your favorite songs 24/7, discover new artists, and connect with the unique vibe of Jamaica. The essence of reggae in one place!" />
 		<meta name="generator" content={Astro.generator} /> 
-		<title>music regge by raggart</title>
+		<title>Raggart - Jamaican Music</title>
 		<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	</head>
   <body>
@@ -47,16 +47,18 @@ const {title} = Astro.props;
   
   h1 {
     font-size: 2rem;
-    font-weight: $bold;
+    font-weight: $regular;
     font-family: $heading;
+    font-style: italic;
     color: $white;
     margin: 0 5%;
   }
 
   h2 {
     font-size: 2.5rem;
-    font-weight: $bold;
+    font-weight: $regular;
     font-family: $heading;
+    font-style: italic;
     color: $white;
     margin: 0 5%;
   }
@@ -80,8 +82,9 @@ const {title} = Astro.props;
   
   p {
     font-size: 1.25rem;
-    font-family: $text;
+    font-family: $heading;
     font-weight: $regular;
+    font-style: italic;
     color: $white;
     margin: 0 5%; 
   }
