--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -113,6 +113,8 @@ import logo from "../assets/image/logoHeader.png";
 
   #close-menu {
     position: absolute;
+    width: 60px;
+    height: 60px;
     background: transparent;
     border: none;
     cursor: pointer;
